--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,15 @@ jobs:
             - deploy:
                 name: digital-ocean
                 command: git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
